# Move_knight_to_coords

./: .gitignore  .travis.yml  CMakeLists.txt  KnightMoves.cpp  KnightMoves.sln  KnightMoves.vcxproj  KnightMoves.vcxproj.filters  ReadMe.txt  build.bat  readme.md  stdafx.cpp
Source/: CMakeLists.txt  KnightMoves.cpp
include/: KnightMoves.h
src/: CMakeLists.txt  KnightMoves.cpp  main.cpp  privilegedMoves.cpp  privilegedMoves.h
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt
